[package]
name = "ffout"
version = "0.1.0"
edition = "2021"

[lib]
name = "ffout"
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ffmpeg-sys-next = {version ="6.0.1", features = ["ffmpeg_6_0"]}
ffmpeg-sys-next = {version ="6.0.1"}

[build-dependencies]
cbindgen = "0.24.5"
